// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders correctly when value < 0 1`] = `
<DocumentFragment>
  .css-1vlay40-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #e9eaeb;
}

.css-j2qx9g-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="-250"
    class="css-1vlay40-StyledProgressContainer e1b95x8r2"
    role="progressbar"
  >
    <div
      class="css-j2qx9g-StyledFilled e1b95x8r0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders correctly when value > 100 1`] = `
<DocumentFragment>
  .css-1vlay40-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #e9eaeb;
}

.css-acgzp-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="250"
    class="css-1vlay40-StyledProgressContainer e1b95x8r2"
    role="progressbar"
  >
    <div
      class="css-acgzp-StyledFilled e1b95x8r0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders info 1`] = `
<DocumentFragment>
  .css-1vlay40-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #e9eaeb;
}

.css-16tzv7z-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #0078d2;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1vlay40-StyledProgressContainer e1b95x8r2"
    role="progressbar"
  >
    <div
      class="css-16tzv7z-StyledFilled e1b95x8r0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders primary 1`] = `
<DocumentFragment>
  .css-1vlay40-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #e9eaeb;
}

.css-z27177-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1vlay40-StyledProgressContainer e1b95x8r2"
    role="progressbar"
  >
    <div
      class="css-z27177-StyledFilled e1b95x8r0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders progression 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1vlay40-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #e9eaeb;
}

.css-9xmuru-StyledProgress {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="css-1vlay40-StyledProgressContainer e1b95x8r2"
    role="progressbar"
  >
    <div
      class="css-9xmuru-StyledProgress e1b95x8r1"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders success 1`] = `
<DocumentFragment>
  .css-1vlay40-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #e9eaeb;
}

.css-1ej1eqr-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #2c8564;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1vlay40-StyledProgressContainer e1b95x8r2"
    role="progressbar"
  >
    <div
      class="css-1ej1eqr-StyledFilled e1b95x8r0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders warning 1`] = `
<DocumentFragment>
  .css-1vlay40-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #e9eaeb;
}

.css-curehl-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #fbc600;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1vlay40-StyledProgressContainer e1b95x8r2"
    role="progressbar"
  >
    <div
      class="css-curehl-StyledFilled e1b95x8r0"
    />
  </div>
</DocumentFragment>
`;
